--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "main": "main.js",
   "scripts": {
     "start": "node dist/Main.js",
-    "build": "tsc --watch"
+    "build": "tsc --watch",
+    "test": "mocha -r ts-node/register test/*.test.ts"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/lodash": "^4.14.149",
     "lodash": "^4.17.15",
-    "typescript": "^3.8.3"
+    "typescript": "^3.8.3",
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.5",
+    "@types/node": "^10.9.2",
+    "chai": "^4.1.2",
+    "mocha": "^5.2.0",
+    "ts-node": "^7.0.1"
   }
 }
