--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
       "noFallthroughCasesInSwitch": true,
       "esModuleInterop": true
   },
-  "include": [ "src/*" ],
+  "include": [ "src/*", "test/*" ],
   "exclude": [ "node_modules" ]
 }
