--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "start": "node dist/Main.js",
+    "start": "node dist/src/Main.js",
     "build": "tsc --watch",
     "test": "mocha -r ts-node/register test/**/*.test.ts"
   },
