--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
       "module": "commonjs",
       "outDir": "./dist",
       "strict": true,
-      "noUnusedLocals": true,
-      "noUnusedParameters": true,
+      "noUnusedLocals": false,
+      "noUnusedParameters": false,
       "noImplicitReturns": true,
       "noFallthroughCasesInSwitch": true,
       "esModuleInterop": true
