--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/lodash": "^4.14.149",
-    "lodash": "^4.17.15",
-    "typescript": "^3.8.3",
     "@types/chai": "^4.1.4",
+    "@types/lodash": "^4.14.149",
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.9.2",
     "chai": "^4.1.2",
+    "lodash": "^4.17.15",
     "mocha": "^5.2.0",
-    "ts-node": "^7.0.1"
+    "ts-node": "^7.0.1",
+    "typescript": "^3.8.3"
   }
 }
