--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
       "module": "commonjs",
       "outDir": "./dist",
       "strict": true,
-      "noUnusedLocals": false,
-      "noUnusedParameters": false,
-      "noImplicitReturns": false,
-      "noFallthroughCasesInSwitch": false,
+      "noUnusedLocals": true,
+      "noUnusedParameters": true,
+      "noImplicitReturns": true,
+      "noFallthroughCasesInSwitch": true,
       "esModuleInterop": true
   },
   "include": [ "src/*", "test/*", "src/**/*", "test/**/*" ],
